5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3988/executions/1573_1332.log
== TEST (2019-03-11 15:38:27) 
-- CODE:
aresta =5
area = 3/2 (3)**2 a * * 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3)**2 a * * 2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:47) 
-- CODE:
aresta =5
area = 3/2 (3) * * 1/2 a * * 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) * * 1/2 a * * 2
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:55) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a * * 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a * * 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:15) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:36) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:59) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:27) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:07) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:13) 
-- CODE:
aresta = 5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:16) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2 a ** 2
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:29) 
-- CODE:
aresta =5
area = 3/2(3) ** 1/2 a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2(3) ** 1/2 a ** 2
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:38) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2  a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2  a ** 2
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:42:54) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1/2  a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1/2  a ** 2
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:08) 
-- CODE:
aresta =5
area = 3/2 (3) ** 1,5  a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 1,5  a ** 2
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:16) 
-- CODE:
aresta =5
area = 3/2 (3) ** 0,5  a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3) ** 0,5  a ** 2
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:00) 
-- CODE:
aresta =5
area = 3/2 (3)**1/2  a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3)**1/2  a ** 2
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:19) 
-- CODE:
aresta =5
area = 3/2 (3)**0,5  a ** 2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3)**0,5  a ** 2
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:06) 
-- CODE:
aresta =5
area = 3/2 (3)**0,5  a ** 2 5
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2 (3)**0,5  a ** 2 5
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:14) 
-- CODE:
aresta =5
area = 5 3/2 (3)**0,5  a ** 2 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 5 3/2 (3)**0,5  a ** 2 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:03) 
-- CODE:
aresta =5
area =3/2 *(3)**0,5  a ** 2 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2 *(3)**0,5  a ** 2 
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:08) 
-- CODE:
aresta =5
area =3/2 (3)**0,5  a ** 2 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2 (3)**0,5  a ** 2 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:21) 
-- CODE:
aresta =5
area =3/2 (3)**0.5  a ** 2 
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area =3/2 (3)**0.5  a ** 2 
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:46:54) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*a** 2 
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**0.5)*a** 2 
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:47:03) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*a**2 
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**0.5)*a**2 
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:47:40) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*a**2 
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area =3/2*(3**0.5)*a**2 
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:48:03) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*5**2 
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:48:05) 
-- CODE:
aresta =5
area =3/2*(3**0.5)*5**2 
 
print(round(area, 4))
-- EXECUTION TIME:
0.125959
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
